# LunaEngine

./: MANIFEST.in  README.md  about.md  build_docs.bat  build_docs.ps1  build_framework.bat  changelog.md  generate_docs.py  lessons.md  lunaengine-icon.aseprite  pyproject.toml  requirements.txt  setup.py
.github/workflows/: docs.yml
docs/: README.md  about.html  code_stats.md  contact.html  elements.md  engine.md  image_converter.md  index.html  layout.md  lighting.md  math_utils.md  particles.md  performance.md  quick-start.html  renderer.md  search-data.json  search.html  search.js  theme.css  theme.js  themes.html  themes.md  threading.md
docs/backend/: controller.html  exceptions.html  index.html  network.html  openal.html  opengl.html  pygame_backend.html  types.html
docs/core/: audio.html  engine.html  index.html  renderer.html  scene.html  window.html
docs/examples/: atlas_demo.html  audio_demo.html  audio_demo.py  bones_demo.html  (+30 more)
examples/: atlas_demo.py  audio_demo.py  basic_game.py  comprehensive_demo.py  filters_demo.py  image_conversion_demo.py  multiplayer_simple_test.py  network_demo.py  new_events.py  new_frame.py  open_gl_demo.py  paperdoll-ex.ase  paperdoll_config.json  paperdoll_demo.py  parallax_demo.py  particle_demo.py  performance_demo.py  shadow_demo.py  snake_demo.py  spritesheets.py  storage_demo.py  topdown_farming_demo.py  ui_comprehensive_demo.py  windows_events_demo.py  working.py
lunaengine/: CODE_STATISTICS.md  __init__.py
ollama_docs/: elements.md  engine.md  image_converter.md  lighting.md  particles.md  performance.md
(+265 files in other folders)
